# PDFs

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  client.py  pyproject.toml  textual_cli.py
alembic/: env.py
alembic/versions/: 0f719dabebd7_add_taxonomy_node_topic_terms.py  2a4a9c6be6e1_rename_file_stats_to_scanned_file_in_.py  44e1cc4fb0f5_add_taxonomy_suggestion_fields.py  5b8fd10e3c12_baseline_schema.py  7b3d0df1c5c2_rename_jobs_to_scan_jobs.py  8f71667bca52_added_tree_node_models.py  9b17820262e4_drop_taxonomy_node_status.py  b7d9c1e3f4a5_add_toc_review_suggestions.py  d6980dd4a9a6_add_taxonomy_assignment_reasoning_.py  ef4c9502ae67_sync_taxonomy_tree_schema.py
docs/: duplicates_show_delete.md  file_watching.md  llm_workflows.md  partitioning.md  phase1_impl.md  phase2_storage.md  phase_flow.md  pymupdf_stdout.md  textual_cli.md  textual_event_cycle.md
impls/: llm_document_helper.md  llm_new_prompt.md  llm_workflows.md  partitioning_algo.md  phase1_impl.md  phase2_storage.md  textual_cli.md
pdfzx/: .gitignore  .pre-commit-config.yaml  pyproject.toml
pdfzx/src/pdfzx/: __init__.py  config.py  inventory.py  llm_suggestion.py  llm_taxonomy.py  llm_toc_review.py  models.py  normalizer.py  pipeline.py  registry.py  storage.py  utils.py
pdfzx/src/pdfzx/db/: __init__.py  base.py  migration.py  models.py  queries.py  session.py
pdfzx/src/pdfzx/db/repositories/: __init__.py  document_paths.py  document_suggestions.py  documents.py  prompts.py  taxonomy_suggestions.py  taxonomy_tree.py  toc_review_suggestions.py
pdfzx/src/pdfzx/db/services/: __init__.py  llm_document_service.py  llm_taxonomy_service.py  llm_toc_review_service.py  prompt_backed_suggestion.py
pdfzx/src/pdfzx/llm/: __init__.py
pdfzx/src/pdfzx/llm/workflows/: __init__.py  base.py  document_suggestion.py  taxonomy_suggestion.py  toc_review_suggestion.py
pdfzx/src/pdfzx/partitioning/: __init__.py  assignment.py  generalize.py  proposal.py  sampler.py
pdfzx/src/pdfzx/prompts/: __init__.py  _shared.py  llm_document_suggestion.py  llm_taxonomy_suggestion.py  llm_toc_review_suggestion.py  taxonomy_assignment.py  taxonomy_partition_generalize.py  taxonomy_partition_proposal.py
pdfzx/src/pdfzx/watch/: __init__.py  events.py  process.py  service.py
pdfzx/tests/: conftest.py  test_client_taxonomy_assignment.py  test_config.py  test_db_migration.py  test_db_queries.py  test_db_session.py  test_document_path_repository.py  test_inventory.py  test_job.py  test_llm_document_service.py  test_llm_document_suggestion_prompt.py  test_llm_suggestion_probe.py  test_llm_taxonomy_batch.py  test_llm_taxonomy_probe.py  test_llm_taxonomy_service.py  test_llm_taxonomy_suggestion_prompt.py  test_llm_toc_review_probe.py  test_llm_toc_review_service.py  test_llm_toc_review_suggestion_prompt.py  test_llm_workflow_base.py  test_models.py  test_normalizer.py  test_partitioning_generalize.py  test_partitioning_sampler.py  test_registry.py  test_storage.py  test_taxonomy_assignment_prompt.py  test_taxonomy_partition_generalize.py  test_taxonomy_partition_proposal.py  test_taxonomy_tree_repository.py  test_utils.py  test_watch_service.py
plans/: phase1.md  phase1_cli.md  phase1_impl.md  phase2.md  project.md
src/pdfzx/: __init__.py  inventory.py  pipeline.py  utils.py
tests/: conftest.py  test_inventory.py  test_utils.py
textual_client/: __init__.py  app.py  config.py  mupdf.py  runtime.py  screens.py
