[project]
name = "pdfzx"
version = "0.1.0"
description = "PDF inventory and enrichment library"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24",
    "langdetect>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfzx"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
