[project]
name = "pdfzx"
version = "0.1.0"
description = "Just extract pdfs"
readme = "README.md"
authors = [
    { name = "tkin91e55", email = "tkingkwun@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langdetect>=1.0.9",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
