[project]
name = "pdfzx"
version = "0.1.0"
description = "PDF inventory and enrichment library — hash, metadata, ToC, classify, enrich."
readme = "README.md"
authors = [
    { name = "tkin91e55", email = "tkingkwun@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "langdetect>=1.0.9",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
]

[project.optional-dependencies]
phase2 = [
    "openai>=1.0.0",
    "pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
extras = [
    "textual>=8.1.1", # if want to use more interactive CLI
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

# ==== ruff ====

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",     # pyflakes — basic errors
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "C90",   # mccabe complexity
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "S",     # flake8-bandit — security
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "TRY",   # tryceratops
    "FLY",   # flynt
    "PERF",  # perflint
    "RUF",   # ruff-specific
    "D",     # pydocstyle
]
ignore = [
    "S101",    # allow assert in tests
    "D100",    # missing docstring in public module
    "D104",    # missing docstring in public package
    "D105",    # missing docstring in magic method
    "D107",    # missing docstring in __init__
    "D203",    # conflicts with D211
    "D212",    # conflicts with D213
    "E402",    # module-level import not at top
    "PLW0603", # global statement — acceptable for logging setup
    "PLR2004", # magic value comparison — acceptable for thresholds
    "RUF012",  # mutable class attributes — acceptable without ClassVar
    "BLE001",  # blind except — acceptable with proper logging
    "SIM102",  # collapsible if — sometimes clearer separate
    "TC001",   # move application import into TYPE_CHECKING — conflicts with runtime use
    "TC002",   # move third-party import into TYPE_CHECKING — conflicts with runtime use
    "TC003",   # move stdlib import into TYPE_CHECKING — conflicts with runtime use
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D101",    # missing docstring in public class
    "D102",    # missing docstring in public method
    "D103",    # missing docstring in public function — not required in tests
    "D106",    # missing docstring in public nested class
    "PLC0415", # import not at top-level — acceptable in test helpers
    "PT018",   # composite assertions — acceptable in tests
    "RUF001",  # ambiguous unicode — CJK test strings are intentional
    "S105",    # possible hardcoded password — false positive on enum value strings
    "TC001",   # move application import into TYPE_CHECKING — not needed in tests
    "E501",    # line too long — long test fixture strings acceptable
]
"src/pdfzx/models.py" = [
    "S105",    # false positive: StrEnum values are not passwords
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

# ==== mypy ====

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["langdetect", "langdetect.*", "pymupdf", "pymupdf.*", "fitz", "fitz.*"]
ignore_missing_imports = true
ignore_errors = true

# ==== pytest ====

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py"]
addopts = "--cov=pdfzx --cov-report=term-missing"
